--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^6.2.3",
     "axios": "^1.13.4",
     "framer-motion": "^12.33.0",
     "lodash": "^4.17.23",
